Fixing flexbox errors with new framework
The new framework messed up the CSS on the selection menu, we are at the end i'm just gonna throw a bunch of importants on it

--- a/helpingHand/src/app/app.component.css
+++ b/helpingHand/src/app/app.component.css
@@ -169,13 +169,13 @@
 }
 
 .suitSelection {
-    margin-top: 10%;
-    color:white;
-    font-weight: bold;
-    font-size: 400%;
-    width: 100%;
-    font-family: Roboto;
-    text-align: center;
+    margin-top: 10% !important;
+    color:white !important;
+    font-weight: bold !important;
+    font-size: 400% !important;
+    width: 100% !important;
+    font-family: Roboto !important;
+    text-align: center !important;
 }
 
 .suitImg {
@@ -185,12 +185,12 @@
 }
 
 .valueSelect {
-    color:white;
-    font-weight: bold;
-    margin-top: 5%;
-    margin-left: 1%;
-    margin-right: 1%;
-    font-size: 300%;
+    color:white !important;
+    font-weight: bold !important;
+    margin-top: 5% !important;
+    margin-left: 1% !important;
+    margin-right: 1% !important;
+    font-size: 300% !important;
 }
 
 .content {
